cmake_minimum_required(VERSION 3.15)
project(cpluspl)

set(CMAKE_CXX_STANDARD 14)
add_subdirectory(cpp_01core_portion)
add_subdirectory(cpp_02template_and_io)
add_subdirectory(cpp_03standard_template_library)

add_executable(CN_01stlrunprinciple cpp_03standard_template_library/CN_01stlrunprinciple.cpp)
add_executable(CN_02stlhelloworld cpp_03standard_template_library/CN_02stlhelloworld.cpp)