cmake_minimum_required(VERSION 3.15)
project(cpluspl)

include_directories(includes)
set(CMAKE_CXX_STANDARD 14)

add_executable(CN_01helloworld CN_01helloworld.cpp)
add_executable(CN_02namespace CN_02namespace.cpp src/CN_02test.cpp)
add_executable(CN_03using CN_03using.cpp)
add_executable(CN_04struct CN_04struct.cpp)
add_executable(CN_05typecheck CN_05typecheck.cpp)
add_executable(CN_06threeop CN_06threeop.cpp)
add_executable(CN_07const CN_07const.cpp src/CN_07test.cpp)
add_executable(CN_08compile CN_08compile.cpp)
add_executable(CN_09reference CN_09reference.cpp)
add_executable(CN_10referencecaution CN_10referencecaution.cpp)
add_executable(CN_11referencearray CN_11referencearray.cpp)
add_executable(CN_12constdef CN_12constdef.cpp)
add_executable(CN_13referencepoint CN_13referencepoint.cpp)
add_executable(CN_14referencescene CN_14referencescene.cpp)
add_executable(CN_15referenceconst CN_15referenceconst.cpp)
add_executable(CN_16macrofunc CN_16macrofunc.cpp)
add_executable(CN_17defaultparameter CN_17defaultparameter.cpp)
add_executable(CN_18paramdeliver CN_18paramdeliver.cpp)
add_executable(CN_19circumference CN_19circumference.cpp)
add_executable(CN_20studentclass CN_20studentclass.cpp)
add_executable(CN_21override CN_21override.cpp)
add_executable(CN_22c++callc CN_22c++callc.cpp src/CN_22test.c)
add_executable(CN_23classandinstance CN_23classandinstance.cpp)
add_executable(CN_24package CN_24package.cpp)
add_executable(CN_25privateattribution CN_25privateattribution.cpp)
add_executable(CN_26structandclass CN_26structandclass.cpp)
add_executable(CN_27cube CN_27cube.cpp)
add_executable(CN_28circleandpoint CN_28circleandpoint.cpp src/CN_28Point.cpp src/CN_28Circle.cpp)
add_executable(CN_29newanddelete CN_29newanddelete.cpp)
add_executable(CN_30defaultnewanddelete CN_30defaultnewanddelete.cpp)
add_executable(CN_31copynew CN_31copynew.cpp)
add_executable(CN_32newandcall CN_32newandcall.cpp)
add_executable(CN_33anonymous CN_33anonymous.cpp)
add_executable(CN_34copynewcall CN_34copynewcall.cpp)
add_executable(CN_35newrule CN_35newrule.cpp)
add_executable(CN_36morenewanddelete CN_36morenewanddelete.cpp)
add_executable(CN_37deepshallow CN_37deepshallow.cpp)
add_executable(CN_38explicit CN_38explicit.cpp)
add_executable(CN_39newmallocandfree CN_39newmallocandfree.cpp)
add_executable(CN_40newarray CN_40newarray.cpp)
add_executable(CN_41staticproperty CN_41staticproperty.cpp)
add_executable(CN_42objectmodel CN_42objectmodel.cpp)
add_executable(CN_43thispoint CN_43thispoint.cpp)
add_executable(CN_44constfunction CN_44constfunction.cpp)
add_executable(CN_45constobject CN_45constobject.cpp)
add_executable(CN_46friendglobal CN_46friendglobal.cpp)
add_executable(CN_47friendclass CN_47friendclass.cpp)
add_executable(CN_48friendclassfunction CN_48friendclassfunction.cpp)
add_executable(CN_49nullpointcallfunction CN_49nullpointcallfunction.cpp)
add_executable(CN_50singletonpattern CN_50singletonpattern.cpp)
add_executable(CN_51singletonpatternexample CN_51singletonpatternexample.cpp)
add_executable(CN_52arrayclass CN_52arrayclass.cpp src/CN_52myarray.cpp)
add_executable(CN_53addoverride CN_53addoverride.cpp)
add_executable(CN_54subtractoverride CN_54subtractoverride.cpp)
add_executable(CN_55leftmoveovriride CN_55leftmoveovriride.cpp)
add_executable(CN_56rightmoveoverride CN_56rightmoveoverride.cpp)
add_executable(CN_57assignoverride CN_57assignoverride.cpp)
add_executable(CN_58relationoverride CN_58relationoverride.cpp)
add_executable(CN_59frontaddbackadd CN_59frontaddbackadd.cpp)
add_executable(CN_60indexoverride CN_60indexoverride.cpp src/CN_52myarray.cpp)
add_executable(CN_61smartpointerclass CN_61smartpointerclass.cpp)
add_executable(CN_62functioncalloverride CN_62functioncalloverride.cpp)
add_executable(CN_63otheroverride CN_63otheroverride.cpp)
add_executable(CN_64stringclass CN_64stringclass.cpp src/CN_64mystring.cpp)
add_executable(CN_65inherit CN_65inherit.cpp)
add_executable(CN_66inheritway CN_66inheritway.cpp)
add_executable(CN_67inheritinstancemodel CN_67inheritinstancemodel.cpp)
add_executable(CN_68inheritnewdelete CN_68inheritnewdelete.cpp)
add_executable(CN_69inheritsamename CN_69inheritsamename.cpp)
add_executable(CN_70inheritstaticproperty CN_70inheritstaticproperty.cpp)
add_executable(CN_71moreinherit CN_71moreinherit.cpp)
add_executable(CN_72diamondinherit CN_72diamondinherit.cpp)
add_executable(CN_73staticcompile CN_73staticcompile.cpp)
add_executable(CN_74multistate CN_74multistate.cpp)
add_executable(CN_75mutistateprinciple CN_75mutistateprinciple.cpp)
add_executable(CN_76purevirtualfunction CN_76purevirtualfunction.cpp)
add_executable(CN_77interface CN_77interface.cpp)
add_executable(CN_78templatefunctionpattern CN_78templatefunctionpattern.cpp)
add_executable(CN_79virtualdeletefunction CN_79virtualdeletefunction.cpp)
add_executable(CN_80fatherreferenceson CN_80fatherreferenceson.cpp)
add_executable(CN_81zooexample CN_81zooexample.cpp)
add_executable(CN_82classexample CN_82classexample.cpp)
add_executable(CN_83claculatorexample CN_83claculatorexample.cpp)