include_directories(includes)
include_directories(src)

add_executable(CN_01functiontemplate CN_01functiontemplate.cpp)
add_executable(CN_02templatedifferencenormal CN_02templatedifferencenormal.cpp)
add_executable(CN_03functioncalrule CN_03functioncalrule.cpp)
add_executable(CN_04templatelimitation CN_04templatelimitation.cpp)
add_executable(CN_05classtemplate CN_05classtemplate.cpp)
add_executable(CN_06moreclasstemplate CN_06moreclasstemplate.cpp)
add_executable(CN_07classtemplateasparameter CN_07classtemplateasparameter.cpp)
add_executable(CN_08classtemplateinherit CN_08classtemplateinherit.cpp)
add_executable(CN_09classtemplateproperty CN_09classtemplateproperty.cpp)
add_executable(CN_10classtemplatemultiplyfiles CN_10classtemplatemultiplyfiles.cpp)
add_executable(CN_11classtemplateconfrontfriendmeta CN_11classtemplateconfrontfriendmeta.cpp)
add_executable(CN_12classtemplateimplementarray CN_12classtemplateimplementarray.cpp)

add_executable(CN_13typetransition CN_13typetransition.cpp)
add_executable(CN_14whyexception CN_14whyexception.cpp)
add_executable(CN_15exceptiongrammar CN_15exceptiongrammar.cpp)
add_executable(CN_16exceptionflow CN_16exceptionflow.cpp)
add_executable(CN_17exceptionadvantage CN_17exceptionadvantage.cpp)
add_executable(CN_18exceptionrestricttypematch CN_18exceptionrestricttypematch.cpp)
add_executable(CN_19exceptioninterfacedeclare CN_19exceptioninterfacedeclare.cpp)

add_executable(CN_20stackunwinding CN_20stackunwinding.cpp)
add_executable(CN_21exceptionlifecycle CN_21exceptionlifecycle.cpp)
add_executable(CN_22exceptionpolymorphism CN_22exceptionpolymorphism.cpp)
add_executable(CN_23standardexceptionclass CN_23standardexceptionclass.cpp)
add_executable(CN_24cin CN_24cin.cpp)
add_executable(CN_25cout CN_25cout.cpp)
add_executable(CN_26fileio CN_26fileio.cpp)
add_executable(CN_27binaryfileio CN_27binaryfileio.cpp)