add_executable(CN_01stlrunprinciple CN_01stlrunprinciple.cpp)
add_executable(CN_02stlhelloworld CN_02stlhelloworld.cpp)
add_executable(CN_03string CN_03string.cpp)
add_executable(CN_04vector CN_04vector.cpp)
add_executable(CN_05deque CN_05deque.cpp)
add_executable(CN_06scoreexample CN_06scoreexample.cpp)
add_executable(CN_07stack CN_07stack.cpp)
add_executable(CN_08queue CN_08queue.cpp)
add_executable(CN_09list CN_09list.cpp)
add_executable(CN_10liftexample CN_10liftexample.cpp)
add_executable(CN_11pairarray CN_11pairarray.cpp)
add_executable(CN_12setandmultiset CN_12setandmultiset.cpp)
add_executable(CN_13mapandmultimap CN_13mapandmultimap.cpp)
add_executable(CN_14stldeepshadowcopproblem CN_14stldeepshadowcopproblem.cpp)
add_executable(CN_15staffexample CN_15staffexample.cpp)
add_executable(CN_16functionobjc CN_16functionobjc.cpp)
add_executable(CN_17lambda CN_17lambda.cpp)
add_executable(CN_18functionobjcadaptation CN_18functionobjcadaptation.cpp)
add_executable(CN_19enumeralgorithm CN_19enumeralgorithm.cpp)
add_executable(CN_20findalgorithm CN_20findalgorithm.cpp)
add_executable(CN_21sortalgorithm CN_21sortalgorithm.cpp)
add_executable(CN_22copyandreplacealgorithm CN_22copyandreplacealgorithm.cpp)
add_executable(CN_23arithmeticgenerationalgorithm CN_23arithmeticgenerationalgorithm.cpp)
add_executable(CN_24setalgorithm CN_24setalgorithm.cpp)
add_executable(CN_25matchexample CN_25matchexample.cpp)